client/views/layout.css
html, body {
  font-size: 16px;
  background-color: #FCFFFA;
}

.comment-reply-form {
    display: none;
}

#submit-new-post-button {
    margin-bottom: 25px;
}

.myname {
    font-size: 1.5rem;
}

.container .ui.header.divider {
    margin: 0.5em 0em 2em 0em
}

a {
    font-weight: bold;
}

.ui.horizontal.inverted.divider {
    margin: 2em 0em;
}

.masthead.center.aligned.segment {
    padding-bottom: 5em;
    margin-bottom: 4em;
}

.ui.two.column.very.relaxed.grid {
    position: relative;
    margin-bottom: 4em;
}

#marvelbutton {
    margin-right: 10px;
}

#infotext {
    margin-bottom: 2em;
}

.masthead h1.ui.header {
    margin-top: 1em;
    margin-bottom: 1em;
    font-size: 2em;
    font-weight: normal;
}

#currentList.header {
    text-align: right; 
    margin-bottom: 25px;
}

#upcomingList.header {
    text-align: right; 
    margin-bottom: 25px;    
}

.fc-toolbar {
    margin-bottom: 0px;
    padding-bottom: 15px;
    background-color: #FCFFFA;
}

.ui.list > .item h3.header {
    margin-bottom: 5px;
}

#calendar {
    background-color: white;
    opacity: 0.9;
}

#calendar-share-button {
    float: right;
}

.orion-bootstrap-admin img {
    max-width: 2.5em;
}

.movie-image {
    margin-top: 16px;
    margin-bottom: 16px;
}



.ui.fluid.card {
    margin: 0.5em 0em;
}


i.icon {
    margin: 0 !important;
}

img {
    width: 100%;
}

a {
  color: inherit;
}


a:hover {
    color:black;
}

.ui.cards>.card img.avatar, .ui.cards>.card .avatar img, .ui.card img.avatar, .ui.card .avatar img {
    width: 2.25em;
    height: 2.25em;
}

.ui.fluid.dimmable.image {
    height: 130px;
}

.ui.blurring.dimmable.medium.image {
    height: 130px !important;
}

div.ui.items>.item>.image:not(.ui) {
    width: 45px;
}

.ui.items>.item:first-child {
    margin-top: inherit;
}

.card .content .extra.content {
    margin-top: 30px;
}

